# Python-for-Power-Platform

./: .gitignore  .pre-commit-config.yaml  .spectral.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MAINTAINERS.md  Makefile  PLAN.md  README.md  SECURITY.md  SUPPORT.md  bandit.yaml  mkdocs.yml  mypy.ini  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md
.github/workflows/: ci.yml  openapi-validation.yml  publish.yml
docs/: adr.md  agents.md  auth.md  batch.md  index.md  licensing.md  pages.md  plan.md  typing-audit.md
docs/adr/: 0001-auth-secrets.md  0002-batch-csv-upsert.md  0003-power-pages-sync.md  0004-merge-strategies.md
docs/architecture/: c4-component.mmd  c4-container.mmd  c4-context.mmd  index.md
docs/examples/: quickstart.ipynb  quickstart.py
docs/user-manual/: 00-overview.md  01-installation.md  02-authentication.md  03-cli-usage.md  04-ci-examples.md  04-power-pages.md  05-dataverse-batch-bulk.md  05-examples.md  06-connectors.md  07-solutions.md  08-config-profiles.md  09-ci-cd-release.md  10-analytics.md  10-security.md  10-user-management.md
openapi/: README.md  analytics-recommendations.yaml  appmanagement-applications.yaml  authorization-rbac.yaml  connectivity-connectors.yaml  connectors.yaml  dataverse-solutions-actions.yaml  dataverse.yaml  environmentmanagement.yaml  governance-dlp.yaml  governance.yaml  licensing.yaml  pac-lite-openapi.yaml  policy-datalossprevention.yaml  powerapps-admin.yaml  powerapps-checker.yaml  powerautomate-admin.yaml  powerautomate-runs.yaml  powerautomate.yaml  powerpages-admin.yaml  powerpages-websites.yaml  powerplatform-admin.yaml  powervirtualagents-bots.yaml  tenantsettings.yaml  usermanagement-users.yaml
scripts/: __init__.py  _shared.py  openapi_validate.py  record_fs_events.py  validate_openapi.sh  verify_event_order.py
src/pacx/: __init__.py  batch.py  bulk_csv.py  cli.py  cli_utils.py  config.py  errors.py  http_client.py  odata.py  secrets.py  solution_source.py  solution_sp.py
src/pacx/auth/: __init__.py  azure_ad.py  base.py
src/pacx/cli/: __init__.py  _pages_utils.py  analytics.py  app_management.py  auth.py  coe.py  common.py  connection.py  connectors.py  dataverse.py  doctor.py  environment.py  governance.py  licensing.py  pages.py  policy.py  power_automate.py  power_platform.py  profile.py  pva.py  solution.py  tenant.py  users.py
src/pacx/clients/: __init__.py  analytics.py  app_management.py  authorization.py  coe.py  connectors.py  dataverse.py  environment_management.py  governance.py  licensing.py  policy.py  power_apps_admin.py  power_automate.py  power_pages.py  power_pages_admin.py  power_platform.py  pva.py  tenant_settings.py  user_management.py
src/pacx/filesystem/: __init__.py  replay.py
src/pacx/models/: __init__.py  analytics.py  app_management.py  authorization.py  dataverse.py  environment_management.py  policy.py  power_automate.py  power_platform.py  pva.py  tenant_settings.py  user_management.py
src/pacx/power_pages/: constants.py  diff.py  providers.py
src/pacx/utils/: guid.py  operation_monitor.py  poller.py
stubs/keyring/: __init__.pyi
stubs/respx/: __init__.pyi
tests/: conftest.py  test_analytics_client.py  test_app_management_client.py  test_auth_providers.py  test_authorization_client.py  test_batch_build.py  test_batch_parse.py  test_batch_retry.py  test_bulk_csv.py  test_bulk_csv_altkey.py  test_cli_analytics_commands.py  test_cli_app_management.py  test_cli_auth_commands.py  test_cli_auth_rbac.py  test_cli_common.py  test_cli_connectors.py  test_cli_dataverse_extra.py  test_cli_doctor.py  test_cli_dv_commands.py  test_cli_errors.py  test_cli_governance.py  test_cli_help_text.py  test_cli_licensing_commands.py  test_cli_pages.py  test_cli_pages_websites.py  test_cli_policy.py  test_cli_power_pages_cli.py  test_cli_power_platform_commands.py  test_cli_profile_commands.py  test_cli_solutions.py  test_cli_tenant_settings.py  test_cli_users.py  test_cli_utils.py  test_config_security.py  test_connectors_client.py  test_dataverse_client.py  test_dataverse_crud.py  test_environment_management_client.py  test_filesystem_replay.py  test_governance_client.py  (+21 more)
tests/auth/: test_azure_oauth.py
tests/cli/: test_auth_aliases.py  test_auth_create.py  test_ci_examples.py  test_cli_app_admin.py  test_cli_coe_commands.py  test_cli_connections.py  test_cli_dataverse_crud.py  test_cli_environment_ops.py  test_cli_power_automate.py  test_cli_pva_commands.py  test_cli_solution_flags.py  test_cli_solution_intel.py  test_login_alias.py  test_profile_masking.py  test_token_resolution.py
tests/config/: test_config_store.py  test_profile_provider_defaults.py  test_profile_sensitive_fields.py
tests/fixtures/filesystem/: mock-events.yaml
tests/secrets/: test_keyring_refs.py  test_set_secret.py
